6.Metrics_Kubernetes/kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
  labels:
    app: kube-state-metrics
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: kube-state-metrics
  type: ClusterIP
