6.Metrics_Kubernetes/kube-state-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics-ingress
  namespace: kube-state-metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kube-state-metrics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-state-metrics
                port:
<<<<<<< HEAD
                  number: 8080
=======
                  number: 8080
>>>>>>> 8c4c1c3889567a10cfc12ed1e5b3b362a4b1337b
